--- a/Presentation/beamer.tex
+++ b/Presentation/beamer.tex
@@ -172,8 +172,10 @@
 
     \note<1->{\begin{itemize} 
         \item{How to encode a problem into a Hamiltonian?}
+        \item{Similar form to the Ising model, but with binary variables (0 or 1)}
         \item{QUBO is a function to be minimised}
         \item{Set of binary variables $x$, matrix $Q$ of real weights that describes interactions between variables}
+        \item{Can read out variable values after evolution to give solution}
     \end{itemize}}
 \end{frame}
 
