--- a/Notebooks/QIRBEE.ipynb
+++ b/Notebooks/QIRBEE.ipynb
@@ -14,6 +14,7 @@
     "import pickle\n",
     "import networkx as nx\n",
     "import itertools as iter\n",
+    "import re\n",
     "\n",
     "from dimod import BinaryQuadraticModel\n",
     "import dimod.generators\n",
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +156,19 @@
     "    # Maximise edge weighting\n",
     "    bqm.add_quadratic_from([(f\"{u}_{i}\", f\"{v}_{j}\", -d[\"weight\"]) for i,j in iter.product(colours, repeat=2)])\n",
     "\n",
+    "pickle.dump(bqm, open(f\"../Pickles/{identifier}_bqm.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Solve classically\n",
-    "df = SteepestDescentSolver().sample(bqm, num_reads=1000).to_pandas_dataframe(True)"
+    "df = SteepestDescentSolver().sample(bqm, num_reads=1000).to_pandas_dataframe(True)\n",
+    "pickle.dump(df, open(f\"../Pickles/{identifier}_df.pkl\", \"wb\"))"
    ]
   },
   {
@@ -250,8 +261,6 @@
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
     "# Show results\n",
     "colours = {0:\"red\", 1:\"green\", 2:\"blue\"}\n",
     "def processNode(node):\n",
@@ -441,7 +450,12 @@
    "source": [
     "arrangement.show(\"midi\")\n",
     "arrangement.show()\n",
-    "#arrangement.write(fmt=\"musicxml.pdf\", fp=\"../Figures/poly.pdf\", dpi=300)"
+    "#arrangement.write(fmt=\"musicxml.pdf\", fp=\"../Figures/poly.pdf\", dpi=300)\n",
+    "\n",
+    "# TODO: Allow specification of instrument for each part\n",
+    "# TODO: Bias selection of phrases to specific parts (e.g. by checking ambitus)\n",
+    "# TODO: Add meaningful edge weightings\n",
+    "# TODO: Find interesting constraints to add to BQM"
    ]
   },
   {
@@ -452,8 +466,8 @@
    "source": [
     "# Save data\n",
     "\n",
-    "excerpt.write(\"xml\", f\"../Pickles/{identifier}_excerpt.xml\")\n",
-    "pickle.dump(phraseLists, open(f\"../Pickles/{identifier}_phrases.pkl\", \"wb\"))\n",
+    "#excerpt.write(\"xml\", f\"../Pickles/{identifier}_excerpt.xml\")\n",
+    "#pickle.dump(phraseLists, open(f\"../Pickles/{identifier}_phrases.pkl\", \"wb\"))\n",
     "pickle.dump(df, open(f\"../Pickles/{identifier}_df.pkl\", \"wb\"))"
    ]
   }
