Create unit programs to write save files

--- a/Code/DataAnalysis.ipynb
+++ b/Code/DataAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use(\"../graphs.mplstyle\")\n",
-    "from music21 import *\n",
+    "from music21 import converter\n",
     "import pickle\n",
     "import pandas as pd\n",
     "\n",
@@ -21,21 +21,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for part in score.parts:\n",
+    "    plotBoundaryStrength(part, 0.3)\n",
+    "\n",
+    "G = pickle.load(open(f\"../Pickles/{identifier}_graph.pkl\", \"rb\"))\n",
+    "pos = nx.spring_layout(G, k=0.5, seed=8)\n",
+    "nx.draw(G, pos=pos, node_size=15, width=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw embedding\n",
+    "\n",
+    "P = DWaveSampler().to_networkx_graph()\n",
+    "B = to_networkx_graph(bqm)\n",
+    "\n",
+    "dnx.draw_pegasus_embedding(P, embedding, B, node_size=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identifier = \"opus74\"\n",
+    "identifier = \"Haydn\"\n",
+    "path = f\"../Pickles/{identifier}/{identifier}_\"\n",
     "\n",
-    "excerpt = converter.parse(f\"../Pickles/{identifier}_excerpt.xml\")\n",
-    "phraseStack = pickle.load(open(f\"../Pickles/{identifier}_phraseStack.pkl\", \"rb\"))\n",
-    "flatStack = [phrase for phrases in phraseStack for phrase in phrases]\n",
-    "SimpleG = pickle.load(open(f\"../Pickles/{identifier}_simpleGraph.pkl\", \"rb\"))\n",
-    "ObjectG = pickle.load(open(f\"../Pickles/{identifier}_objectGraph.pkl\", \"rb\"))\n",
-    "df = pickle.load(open(f\"../Pickles/{identifier}_df.pkl\", \"rb\"))\n",
+    "score = converter.parse(path + \"score.musicxml\")\n",
+    "phrases = pickle.load(open(path + \"phrases.pkl\", \"rb\"))\n",
+    "G = nx.read_graphml(path + \"graph.graphml\")\n",
     "\n",
-    "sample = df[\"sample\"][0]\n",
-    "chosen = [x for x in sample if sample[x] == 1]"
+    "\n",
+    "#df = pickle.load(open(f\"../Pickles/{identifier}_df.pkl\", \"rb\"))\n",
+    "\n",
+    "#sample = df[\"sample\"][0]\n",
+    "#chosen = [x for x in sample if sample[x] == 1]"
    ]
   },
   {
@@ -454,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
