--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -12,6 +12,7 @@
 
 \usepackage[a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \renewcommand{\baselinestretch}{1.15}     % Defines the line spacing
+%should be setspace package???
 
 % Defines caption font size as 9pt and caption title bolded
 \usepackage[style=base, font=small, labelfont=bf]{caption}
